--- a/index.html
+++ b/index.html
@@ -1,68 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV Maker - Login / Sign Up</title>
 
-<title>Login Signup</title>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
 
-<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center">
+  <!-- Theme Toggle -->
+  <button id="themeToggle" class="theme-btn">
+    <i class="bi bi-moon-stars-fill"></i>
+  </button>
 
-  <div class="auth-wrapper">
+  <div class="container-main" id="container">
 
-    <div class="auth-card">
-
-      <input type="checkbox" id="toggle">
-
-      <div class="card-inner">
-
-        <!-- LOGIN -->
-        <div class="form login">
-          <h2>Login</h2>
-
-          <form onsubmit="login(event)">
-            <input type="email" id="loginemail" placeholder="Email" required>
-            <input type="password" id="loginpass" placeholder="Password" required>
-
-            <button>Login</button>
-          </form>
-
-          <label for="toggle">Create new account</label>
+    <!-- SIGN UP FORM -->
+    <div class="form-container sign-up-container">
+      <form onsubmit="register(event)">
+        <h1>Create Account</h1>
+        <div class="social-container">
+          <a href="#" class="social"><i class="bi bi-google"></i></a>
+          <a href="#" class="social"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="social"><i class="bi bi-linkedin"></i></a>
         </div>
+        <span>or use your email for registration</span>
 
-        <!-- SIGNUP -->
-        <div class="form signup">
-          <h2>Sign Up</h2>
+        <input type="text" id="logname" placeholder="Name" required />
+        <input type="email" id="logemail" placeholder="Email" required />
+        <input type="password" id="logpass" placeholder="Password" required />
+        <input type="password" id="logCpass" placeholder="Confirm Password" required />
 
-          <form onsubmit="register(event)">
-            <input type="text" id="logname" placeholder="Full Name" required>
-            <input type="email" id="logemail" placeholder="Email" required>
-            <input type="password" id="logpass" placeholder="Password" required>
-            <input type="password" id="logCpass" placeholder="Confirm Password" required>
+        <button type="submit">Sign Up</button>
+      </form>
+    </div>
 
-            <button>Create Account</button>
-          </form>
-
-          <label for="toggle">Already have account?</label>
+    <!-- SIGN IN FORM -->
+    <div class="form-container sign-in-container">
+      <form onsubmit="login(event)">
+        <h1>Sign in</h1>
+        <div class="social-container">
+          <a href="#" class="social"><i class="bi bi-google"></i></a>
+          <a href="#" class="social"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="social"><i class="bi bi-linkedin"></i></a>
         </div>
+        <span>or use your account</span>
 
+        <input type="email" id="loginemail" placeholder="Email" required />
+        <input type="password" id="loginpass" placeholder="Password" required />
+        <a href="#">Forgot your password?</a>
+
+        <button type="submit">Sign In</button>
+      </form>
+    </div>
+
+    <!-- OVERLAY (Animation Part) -->
+    <div class="overlay-container">
+      <div class="overlay">
+        <div class="overlay-panel overlay-left">
+          <h1>Welcome Back!</h1>
+          <p>To keep connected with us please login with your personal info</p>
+          <button class="ghost" id="signIn">Sign In</button>
+        </div>
+        <div class="overlay-panel overlay-right">
+          <h1>Hello, Friend!</h1>
+          <p>Enter your personal details and start your journey with us</p>
+          <button class="ghost" id="signUp">Sign Up</button>
+        </div>
       </div>
     </div>
   </div>
 
-</div>
-
-<script src="app.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <!-- Scripts -->
+  <script src="app.js"></script>
 </body>
+
 </html>
